[gd_scene load_steps=26 format=2]

[ext_resource path="res://Enemies/Bat.png" type="Texture" id=1]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://Collision Boxes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Bat.gd" type="Script" id=4]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Collision Boxes/PlayerDetectionArea.tscn" type="PackedScene" id=6]
[ext_resource path="res://Collision Boxes/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Collision Boxes/SoftCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=9]
[ext_resource path="res://WhiteColour.shader" type="Shader" id=10]

[sub_resource type="CircleShape2D" id=1]
radius = 50.0

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 10 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "Fly",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=9]
radius = 3.62252

[sub_resource type="CapsuleShape2D" id=10]
radius = 6.0
height = 6.0

[sub_resource type="CapsuleShape2D" id=11]
radius = 6.0
height = 6.0

[sub_resource type="CircleShape2D" id=12]
radius = 5.15006

[sub_resource type="CircleShape2D" id=13]
radius = 5.08698

[sub_resource type="Animation" id=14]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=15]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Bat" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 4 )

[node name="PlayerDetectionArea" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, -16 )

[node name="CollisionShape2D" parent="PlayerDetectionArea" index="0"]
modulate = Color( 1, 1, 1, 0.231373 )
show_behind_parent = true
position = Vector2( 0, -4.02331e-07 )
shape = SubResource( 1 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 6

[node name="BodySprite" type="AnimatedSprite" parent="."]
material = SubResource( 2 )
frames = SubResource( 8 )
animation = "Fly"
frame = 2
playing = true
offset = Vector2( 0, -12 )

[node name="ShadowSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 9 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Hurtbox" parent="StaticBody2D" instance=ExtResource( 3 )]
collision_layer = 8

[node name="CollisionShape2D" parent="StaticBody2D/Hurtbox" index="0"]
position = Vector2( 0, -13 )
shape = SubResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, -13 )
shape = SubResource( 11 )

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
visible = false
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -13 )
rotation = 0.140127
shape = SubResource( 12 )

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]
visible = false
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 13 )

[node name="WanderController" parent="." instance=ExtResource( 9 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 14 )
anims/Stop = SubResource( 15 )

[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="StaticBody2D/Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="StaticBody2D/Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="StaticBody2D/Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]

[editable path="PlayerDetectionArea"]
[editable path="StaticBody2D/Hurtbox"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
